--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
 		<spring-native.version>0.10.3</spring-native.version>
 	</properties>
 	<dependencies>
+                <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
