--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mariadb://localhost:3306/cardapio_web?zeroDateTimeBehavior=CONVERT_TO_NULL
+spring.datasource.url= jdbc:mysql://localhost:3306/cardapio_web?useTimezone=true&serverTimezone=UTC
 spring.sql.init.username= root
 spring.sql.init.password= root01
 spring.jpa.show-sql= true
