criada a classe DiaSemanaEnum e adicionada as annotations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/cardapio_web?useTimezone=true&serverTimezone=UTC
-spring.sql.init.username= root
-spring.sql.init.password= root01
+
+spring.datasource.url= jdbc:mysql://root:root01@localhost:3306/cardapio_web?useTimezone=true&serverTimezone=UTC
 spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto= create  
