--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,17 @@
 		<java.version>11</java.version>
 		<repackage.classifier/>
 		<spring-native.version>0.10.3</spring-native.version>
+                <thymeleaf.version>3.0.10.RELEASE</thymeleaf.version>
 	</properties>
 	<dependencies>
                 <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+                <dependency>
+                    <groupId>org.thymeleaf</groupId>
+                    <artifactId>thymeleaf</artifactId>
+                </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -32,6 +37,11 @@
 			<artifactId>spring-native</artifactId>
 			<version>${spring-native.version}</version>
 		</dependency>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-validation</artifactId>
+                </dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
